Fixed CLR_TEXTNOTPERMITED on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body{
     text-align: center;
     font-family: 'Nabla', cursive;
     background-color: #040720;
-    color: white;
     margin: 10rem;
 }
 
